--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ header {
     }
 
 /**/
+.container-fluid{
+    padding-left: 0;
+    padding-right: 0%;
+}
 .banner {
     background: url(../images/d2.jpg);
     background-repeat: no-repeat !important;
