--- a/css/style.css
+++ b/css/style.css
@@ -192,8 +192,14 @@ footer {
     }
 }
 /**hgsfhdjgfhsdgfhdfg/
-
-
-
-
-
+.animated-title {
+    animation: fadeInUp 10s forwards;
+}
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
